# fedml

./: .dockerignore  .gitignore  README.md  TODO  design-decisions.md  docker-compose.yaml  motivation.md  new-project-scoping.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/algorithm/: central-sync-avg.yaml
configs/comms/: local.yaml
configs/data/: femnist.yaml  fesimple.yaml  gfemnist.yaml  simple.yaml
configs/dp/: base.yaml
configs/model/: cnn-med.yaml  cnn-small.yaml  mlp-med.yaml  mlp-small.yaml
configs/trainer/: test.yaml
configs/worker/: base.yaml
deai/: aggregators.py  algorithms.py  comms.py  data.py  decentral.py  logging.py  network.py  serial.py  trainer.py  types.py  utils.py  worker.py
deai/models/: base.py  mnist.py
deploy/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  test.tfvars  variables.tf
deploy/modules/ecs_cluster/: main.tf
deploy/modules/network/: main.tf
deploy/modules/service_discovery/: main.tf
docker/: Dockerfile.base  Dockerfile.main  Dockerfile.test
outputs/2025-01-29/10-17-54/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-29/10-18-39/.hydra/: config.yaml  hydra.yaml
scripts/: bootstrap.sh  entrypoint.sh  log-helloworld.sh  push_to_ecr.sh  run_worker.py
tests/: test_comms.py  test_error_logging.py  test_eval_worker.py  test_fedata.py  test_femnist.py  test_gfemnist.py  test_local_subprocess_federated.py  test_local_threaded_federated.py  test_mocker_fixture.py  test_pytree.py  test_trainer.py  test_worker.py
(+595 files in other folders)
